writerfilter/source/ooxml/OOXMLDocumentImpl.hxx
@@ -37,7 +37,8 @@ class OOXMLDocumentImpl : public OOXMLDocument
 {
     OOXMLStream::Pointer_t mpStream;
     css::uno::Reference<css::task::XStatusIndicator> mxStatusIndicator;
-    writerfilter::Reference<Stream>::Pointer_t mpXNoteStream;
+    writerfilter::Reference<Stream>::Pointer_t mpXFootnoteStream;
+    writerfilter::Reference<Stream>::Pointer_t mpXEndnoteStream;
     sal_Int32 mnXNoteId;
 
     css::uno::Reference<css::frame::XModel> mxModel;
